# hector_nist_arenas_gazebo

./: .gitignore  stack.xml
hector_nist_arena_designer/: CMakeLists.txt  config.xml  mainpage.dox  manifest.xml  package.xml  resources.qrc
hector_nist_arena_designer/doc/: index.html  style.css
hector_nist_arena_designer/doc/img/: grid.pxm
hector_nist_arena_designer/icons/: icon.psd  icon2.psd
hector_nist_arena_designer/src/: global.h  main.cpp
hector_nist_arena_designer/src/model/: arena.cpp  arena.h  arenaelement.cpp  arenaelement.h  arenaelementtype.cpp  arenaelementtype.h  arenaelementtyperegistry.cpp  arenaelementtyperegistry.h  xmlloadingexception.cpp  xmlloadingexception.h
hector_nist_arena_designer/src/ui/: arenacontroller.cpp  arenacontroller.h  arenaelementtypescene.cpp  arenaelementtypescene.h  arenascene.cpp  arenascene.h  arenasceneelement.cpp  arenasceneelement.h  arenaview.cpp  arenaview.h  editor.cpp  editor.h  editor.ui  metainfobox.cpp  metainfobox.h
hector_nist_arena_elements/: CMakeLists.txt  hazmat_sign_sourcesource.txt  mainpage.dox  manifest.xml  package.xml
hector_nist_arena_elements/Media/models/: Fireextinguisher_BI.dae  corner_diag_120.dae  elev_ramp_labyrinth.dae  elevated_floor_120.dae  elevated_ramps.dae  fiducial_barrel.dae  fiducial_barrel_high.dae  floor_tile_black.dae  floor_tile_white.dae  full_ramp.dae  half_ramp.dae  half_ramp_shifted.dae  hazmat.dae  hazmat_blasting-agents.dae  hazmat_corrosive.dae  hazmat_dangerous-when-wet.dae  hazmat_explosives.dae  hazmat_flammable-gas.dae  hazmat_flammable-solid.dae  hazmat_fuel-oil.dae  hazmat_inhalation-hazard.dae  hazmat_non-flammable-gas.dae  hazmat_organic-peroxide.dae  hazmat_oxidizer.dae  hazmat_oxygen.dae  hazmat_poison.dae  hazmat_radioactive.dae  hazmat_spontaneously-combustible.dae  lengthening_man3.dae  lengthening_man3_bottom.dae  manip_storage.dae  pvc_pipe.dae  readiness_test.dae  red_barrel.dae  sand_wheel.dae  simple_elev_ramp.dae  simple_elev_ramp_line.dae  simple_elev_ramp_line_better_quality.dae  simple_elev_ramp_new.blend  simple_elev_ramp_rc22.dae  (+33 more)
hector_nist_arena_elements/elements/corner_diag_120/: properties.xml
hector_nist_arena_elements/elements/elevated_floor_120/: properties.xml
hector_nist_arena_elements/elements/elevated_ramps/: properties.xml
hector_nist_arena_elements/elements/fiducial_barrel/: properties.xml
hector_nist_arena_elements/elements/fiducial_barrel_high/: properties.xml
hector_nist_arena_elements/elements/fire_extinguisher/: properties.xml
hector_nist_arena_elements/elements/floor_tile_black/: properties.xml
hector_nist_arena_elements/elements/floor_tile_white/: properties.xml
hector_nist_arena_elements/elements/full_ramp/: icon.pxm  properties.xml
hector_nist_arena_elements/elements/half_ramp/: icon.pxm  properties.xml
hector_nist_arena_elements/elements/half_ramp_shifted/: properties.xml
hector_nist_arena_elements/elements/hazmat/: properties.xml  properties.xml~
hector_nist_arena_worlds/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hector_nist_arena_worlds/arenas/: ahg_arena_basic.raf  barrel_test_arena  elevated_world_test.raf  exploration_eval_arena.raf  exploration_eval_arena_2.raf  fire_extinguisher_test_1.raf  fire_extinguisher_test_2.raf  fire_extinguisher_test_3.raf  go2011_arena.raf  go2013_arena.raf  go2013_arena_tg.raf  go2015_arena.raf  hazmat_test.raf  inner_explore_test.raf  map_combiner_testworld.raf  maze_10m_x_14m.raf  maze_many_victims.raf  qr_code_testing.raf  rc_2015_arena_big.raf  rc_2015_arena_small.raf  rc_2016_arena_exp1.raf  rc_2016_arena_man1.raf  rc_2016_arena_man3.raf  rc_2016_arena_man5.raf  rc_2016_arena_rails.raf  rc_2017_outdoors.raf  rc_2022_obs2.raf  robocup_dex5.raf  robocup_mob4.raf  robocup_obs2_hurdles.raf  slam_lc_02.raf  slam_lc_03.raf  slam_lc_04.raf  slam_lc_test_01  small_victim_test.raf  stair_test_raw_v1.raf  stair_test_slopes.raf  start_check.raf  test_far_away_victims.raf  test_nonreachable_victims.raf  (+4 more)
hector_nist_arena_worlds/launch/: barrel_test.launch  door_standalone.launch  elevated_world_test.launch  elevation_mapping_test.launch  exploration_eval_arena.launch  exploration_eval_arena_2.launch  exploration_eval_arena_2_door.launch  gas_station.launch  go2011_arena.launch  go2013_arena.launch  go2013_arena_flat.launch  go2013_arena_tg.launch  go2015_arena.launch  hazmat_test.launch  inner_explore_test.launch  maze_10m_x_14m.launch  maze_many_victims.launch  qr_code_testing.launch  rc_2015_arena_big.launch  rc_2015_arena_small.launch  rc_2016_arena_rails.launch  rc_2016_dex1.launch  rc_2016_door.launch  rc_2016_exp1.launch  rc_2016_exp4.launch  rc_2016_exp5.launch  rc_2016_man1.launch  rc_2016_man3.launch  rc_2016_man5.launch  rc_2016_rails_small.launch  rc_2017_outdoors.launch  rc_2018_man1.launch  rcgo_2018_arena_exp5.launch  sensor_timing_test.launch  slam_lc_test_01.launch  slam_lc_test_02.launch  small_victim_test.launch  stair_test_slope.launch  stair_test_v1.launch  start.launch  (+8 more)
hector_nist_arena_worlds/worlds/: barrel_test_arena.world  door_standalone.world  elevated_world_test.world  elevation_mapping_test.world  exploration_eval_arena.world  exploration_eval_arena_2.world  exploration_eval_arena_2_door.world  fire_extinguisher_test_1.world  fire_extinguisher_test_2.world  fire_extinguisher_test_3.world  gas_station.world  go2011_arena.world  go2013_arena.world  go2013_arena_flat.world  go2013_arena_tg.world  go2015_arena.world  go2015_arena_angled_parts.world  go2015_arena_angled_parts_standalone.world  hazmat_test.world  inner_explore_test.world  map_combiner_testworld.world  maze_10m_x_14m.world  maze_many_victims.world  qr_code_testing.world  rc_2015_arena_big.world  rc_2015_arena_small.world  rc_2016_arena_dex1.world  rc_2016_arena_exp1.world  rc_2016_arena_exp5.world  rc_2016_arena_man1.world  rc_2016_arena_man3.world  rc_2016_arena_man5.world  rc_2016_arena_rails.world  rc_2016_door.world  rc_2016_rails_small.world  rc_2017_outdoors.world  rc_2018_arena_man1.world  rc_2022_obs2.world  rcgo_2018_arena_exp5.world  robocup_mob4.world  (+16 more)
(+95 files in other folders)
