<package format="2">
  <name>hector_nist_arena_designer</name>
  <version>0.1.0</version>
  <description>hector_nist_arena_designer is a simple GUI for the fast and easy creation of test scenarios involving NIST standard test methods for response robots.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_nist_arena_designer</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <author email="not_available@this.time">Johannes Simon</author>
  
  
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>libqt5-widgets</depend>
  <depend>libqt5-xml</depend>
  <depend>hector_nist_arena_worlds</depend>

</package>
