<package>
  <name>hector_nist_arena_elements</name>
  <version>0.1.0</version>
  <description>hector_nist_arena_elements contains models of elements/parts used in NIST standard test arenas for response robots. Using these elements, scenarios can be generated for simulation using gazebo.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_nist_arena_elements</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <author email="not_available@this.time">Johannes Simon</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_ros</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>gazebo_ros</test_depend> -->

<export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
</export>

</package>